  and associated objects in an R environment.

- Exception :class:`rpy2.rinterface.ParsingIncompleError`, a child class of
  :class:`rpy2.rinterface.ParsingError` raised when
  calling :meth:`rpy2.rinteface.parse` results in R's C-level status
  to be `PARSE_INCOMPLETE`. This can make a Python implementation of an
  IDE for R easier.
  

Bugs fixed
----------

- Conversion rules were not applied when parsing and evaluating string
  as R with :class:`rpy2.robjects.R`.

- Calling the constructor for :class:`rpy2.robjects.vectors.FactorVector`
  with an R factor is no longer making a copy, loosing the associated
  R attributes if any (fixes issue #299).

- `rpy2` could crash when R was unable to dynamically load the C extension for
  one of its packages (noticed with issue #303).
  

Changes
-------

- :func:`rpy2.rinterface.is_initialized` is now a function.

- :meth:`rpy2.robjects.R.__call__` is now calling R's `base::parse()`
  to parse the string rather the parser through R's C-API. The workaround
  let's us retrieve R's error message in case of failure (see issue #300)


Release 2.6.3
=============

Bug fixed
---------

- Metaclass `RS4Auto_Type` facilitating the creation of Python
  classes from R S4 classes was not handling classes without
  methods (issue #301)


Release 2.6.2
=============

Bugs fixed
----------
 
- Check that R >= 3.2 is used at build time (issue #291)

- Conversion rules were not applied when parsing and evaluating string
  as R code with :class:`rpy2.robjects.R`.


Release 2.6.1
=============

New features
------------

- Because of their long names, the classes
  :class:`SignatureTranslatedAnonymousPackage`,
  :class:`SignatureTranslatedPackage`, and
  :class:`SignatureTranslatedFunction`
  in :mod:`rpy2.robjects.packages` have now the aliases
  :class:`STAP`, :class:`STP`, and :class:`STF` respectively.

Bugs fixed
----------

- Typo in function name emitting warnings at build time (issue #283)
 